<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mybluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎使用!</string>
    <string name="open">打开蓝牙</string>
    <string name="visible">蓝牙可见</string>
    <string name="search">搜索蓝牙</string>
    <string name="connect">连接蓝牙</string>
    <string name="low">基础功能</string>
    <string name="back">返回主页</string>
    <string name="mid">建立通信</string>
    <string name="high">高级功能</string>
    <string name="select_file">选择文件</string>
    <string name="send_file1">发送文件：</string>
    <string name="null_name">null</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="receive">接收动态</string>
    <string name="share">共享网络</string>
    <string name="ring_and_vibrate">铃声和振动</string>
    <string name="ring">铃声</string>
    <string name="vibrate">振动</string>
    <string name="silent">静音</string>
</resources>
