<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/widget43"
	android:background="@drawable/activity_bg"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
<Button
	android:id="@+id/start"
	android:layout_width="109dp"
	android:layout_height="wrap_content"
	android:text="@string/open"
	android:layout_alignParentBottom="true"
	android:layout_toLeftOf="@+id/visible" />
<Button
	android:id="@+id/visible"
	android:layout_width="104dp"
	android:layout_height="wrap_content"
	android:text="@string/visible"
	android:layout_alignParentBottom="true"
	android:layout_toLeftOf="@+id/back" />
<Button
	android:id="@+id/back"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/back"
	android:layout_alignParentBottom="true"
	android:layout_alignParentRight="true" />
<TextView
	android:id="@+id/widget47"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/hello_world"
	android:layout_alignParentTop="true"
	android:layout_alignParentLeft="true" />
</RelativeLayout>
