<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/activity_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_index" >
    
    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello_world"
    />
 <Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			android:text="@string/low"
			android:id="@+id/low" />
     <Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			android:layout_toRightOf="@id/low"
			android:layout_alignTop="@id/low"
			android:text="@string/mid"
			android:id="@+id/mid" />
      <Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			android:layout_toRightOf="@id/mid"
			android:layout_alignTop="@id/mid"
			android:text="@string/high"
			android:id="@+id/high" />

</RelativeLayout>
