<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/activity_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdvancedActivity" >
    
    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello_world"
    />
 <Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			android:text="@string/receive"
			android:id="@+id/receive" />
     <Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			android:layout_toRightOf="@id/receive"
			android:layout_alignTop="@id/receive"
			android:text="@string/share"
			android:id="@+id/share" />
      <Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" 
			android:layout_toRightOf="@id/share"
			android:layout_alignTop="@id/share"
			android:text="@string/back"
			android:id="@+id/back6" />

</RelativeLayout>
