<?xml version="1.0" encoding="utf-8"?>
<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
     <RadioGroup
	   android:id="@+id/RadioGroup01"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true">
        <RadioButton
            android:text="@string/ring_and_vibrate"
            android:id="@+id/ring_and_vibrate01"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"/>
        <RadioButton
            android:text="@string/ring"
            android:id="@+id/ring01"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"/>
        <RadioButton
            android:text="@string/vibrate"
            android:id="@+id/vibrate01"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"/>
        <RadioButton
            android:text="@string/silent"
            android:id="@+id/silent01"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"/>
    </RadioGroup>
    <RadioGroup
        android:orientation="vertical"
        android:id="@+id/RadioGroup02"
        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true">
        <RadioButton
            android:text="@string/ring_and_vibrate"
            android:id="@+id/ring_and_vibrate02"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"/>
        <RadioButton
            android:text="@string/ring"
            android:id="@+id/ring02"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"/>
        <RadioButton
            android:text="@string/vibrate"
            android:id="@+id/vibrate02"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"/>
        <RadioButton
            android:text="@string/silent"
            android:id="@+id/silent02"
            android:layout_width="fill_parent"
            android:textSize="24sp"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"/>
    </RadioGroup>

</ImageView>
